Исправил путь картинок

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,35 +11,35 @@
         </div>
         <div class="hero-img">
             <picture class="hero-img-picture">
-                <source srcset="../images/hero/hero-bg-desktop.webp 1x, ../images/hero/hero-bg-desktop@2x.webp 2x"
+                <source srcset="./images/hero/hero-bg-desktop.webp 1x, ./images/hero/hero-bg-desktop@2x.webp 2x"
                     media="(min-width: 1280px)" type="image/webp">
-                <source srcset="../images/hero/hero-bg-desktop.png 1x, ../images/hero/hero-bg-desktop@2x.png 2x"
+                <source srcset="./images/hero/hero-bg-desktop.png 1x, ./images/hero/hero-bg-desktop@2x.png 2x"
                     media="(min-width: 1280px)">
-                <source srcset="../images/hero/hero-bg-tablet.webp 1x, ../images/hero/hero-bg-tablet@2x.webp 2x"
+                <source srcset="./images/hero/hero-bg-tablet.webp 1x, ./images/hero/hero-bg-tablet@2x.webp 2x"
                     media="(min-width: 768px)" type="image/webp">
-                <source srcset="../images/hero/hero-bg-tablet.png 1x, ../images/hero/hero-bg-tablet@2x.png 2x"
+                <source srcset="./images/hero/hero-bg-tablet.png 1x, ./images/hero/hero-bg-tablet@2x.png 2x"
                     media="(min-width: 768px)">
-                <source srcset="../images/hero/hero-bg-mobile.webp 1x, ../images/hero/hero-bg-mobile@2x.webp 2x"
+                <source srcset="./images/hero/hero-bg-mobile.webp 1x, ./images/hero/hero-bg-mobile@2x.webp 2x"
                     media="(min-width: 320px)" type="image/webp">
-                <source srcset="../images/hero/hero-bg-mobile.png 1x, ../images/hero/hero-bg-mobile@2x.png 2x"
+                <source srcset="./images/hero/hero-bg-mobile.png 1x, ./images/hero/hero-bg-mobile@2x.png 2x"
                     media="(min-width: 320px)">
-                <img class="hero-bg-img" src="../images/hero/hero-bg-mobile.png" alt="Криво вырезанная картинка с училкой и студентами">
+                <img class="hero-bg-img" src="./images/hero/hero-bg-mobile.png" alt="Криво вырезанная картинка с училкой и студентами">
             </picture>
         
             <picture class="hero-img-picture">
-                <source srcset="../images/hero/hero-img-desktop.webp 1x, ../images/hero/hero-img-desktop@2x.webp 2x"
+                <source srcset="./images/hero/hero-img-desktop.webp 1x, ./images/hero/hero-img-desktop@2x.webp 2x"
                     media="(min-width: 1280px)" type="image/webp">
-                <source srcset="../images/hero/hero-img-desktop.png 1x, ../images/hero/hero-img-desktop@2x.png 2x"
+                <source srcset="./images/hero/hero-img-desktop.png 1x, ./images/hero/hero-img-desktop@2x.png 2x"
                     media="(min-width: 1280px)">
-                <source srcset="../images/hero/hero-img-tablet.webp 1x, ../images/hero/hero-img-tablet@2x.webp 2x"
+                <source srcset="./images/hero/hero-img-tablet.webp 1x, ./images/hero/hero-img-tablet@2x.webp 2x"
                     media="(min-width: 768px)" type="image/webp">
-                <source srcset="../images/hero/hero-img-tablet.png 1x, ../images/hero/hero-img-tablet@2x.png 2x"
+                <source srcset="./images/hero/hero-img-tablet.png 1x, ./images/hero/hero-img-tablet@2x.png 2x"
                     media="(min-width: 768px)">
-                <source srcset="../images/hero/hero-img-mobile.webp 1x, ../images/hero/hero-img-mobile@2x.webp 2x"
+                <source srcset="./images/hero/hero-img-mobile.webp 1x, ./images/hero/hero-img-mobile@2x.webp 2x"
                     media="(min-width: 320px)" type="image/webp">
-                <source srcset="../images/hero/hero-img-mobile.png 1x, ../images/hero/hero-img-mobile@2x.png 2x"
+                <source srcset="./images/hero/hero-img-mobile.png 1x, ./images/hero/hero-img-mobile@2x.png 2x"
                     media="(min-width: 320px)">
-                <img class="hero-img-img" src="../images/hero/hero-img-mobile.png"
+                <img class="hero-img-img" src="./images/hero/hero-img-mobile.png"
                     alt="Криво вырезанная картинка с училкой и студентами">
             </picture>
         </div>
