--- a/src/sass/layout/_form.scss
+++ b/src/sass/layout/_form.scss
@@ -2,7 +2,7 @@
   font-family: Montserrat;
   font-style: normal;
   text-align: center;
-  background: url('../images/bg-tab.png') $text-dark;
+  background: url('../images/bg_img_tablet-min.png') $text-dark;
   background-repeat: no-repeat;
   background-position: 82% 50%;
   padding: 50px 0;
@@ -42,7 +42,7 @@
 }
 
 .registration-form__input {
-  width: 100%;
+  width: 280px;
   height: 48px;
 }
 
