added styles for mobile

--- a/src/partials/advantages.html
+++ b/src/partials/advantages.html
@@ -1,23 +1,26 @@
-<div class="container">
-  <h2 class="advantages-title">Почему нас выбирают</h2>
-  <ul class="advantages-list">
-    <li class="advantages-item">01
-        <p class="advantages-text">Обучение в малых командах</p>
-    </li>
-    <li class="advantages-item">02
-        <p class="advantages-text">Визуализированные конспекты</p>
-    </li>
-    <li class="advantages-item">03
-        <p class="advantages-text">Каждое занятие имеет цель и конкретный результат</p>
-    </li>
-    <li class="advantages-item">04
-        <p class="advantages-text">Реальные результаты преподавателя</p>
-    </li>
-    <li class="advantages-item">05
-        <p class="advantages-text">Прогамма курса соответствует требованиям МОН Украины</p>
-    </li>
-    <li class="advantages-item">06
-        <p class="advantages-text">Набор команд по уровням знаний</p>
-    </li>
-</ul>
-</div>
+<section class="advantages">
+    <div class="container">
+      <h2 class="advantages-title">Почему нас выбирают</h2>
+      <ul class="advantages-list list">
+        <li class="advantages-item">— 01
+            <p class="advantages-text">Обучение в малых командах</p>
+        </li>
+        <li class="advantages-item">— 02
+            <p class="advantages-text">Визуализированные конспекты</p>
+        </li>
+        <li class="advantages-item">— 03
+            <p class="advantages-text">Каждое занятие имеет цель и конкретный результат</p>
+        </li>
+        <li class="advantages-item">— 04
+            <p class="advantages-text">Реальные результаты преподавателя</p>
+        </li>
+        <li class="advantages-item">— 05
+            <p class="advantages-text">Прогамма курса соответствует требованиям МОН Украины</p>
+        </li>
+        <li class="advantages-item">— 06
+            <p class="advantages-text">Набор команд по уровням знаний</p>
+        </li>
+    </ul>
+    </div>
+    </section>
+        
