--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -6,18 +6,50 @@
 
 .program {
   padding-top: 50px;
-  padding-bottom: 50px;
+  padding-bottom: 537px;
   background-color: #000000;
+  background-image: url('../images/program/program-mobile.png');
+  background-repeat: no-repeat;
+  background-size: 120px 137px;
+  background-position: right bottom 440px;
+
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    background-image: url('../images/program/program-mobile@2x.png');
+  }
+}
+
+.program .container {
+  position: relative;
 }
 
 .program-title {
   margin-bottom: 43px;
   font-weight: 800;
   font-size: 20px;
-  line-height: 1.13;
+  line-height: 1.3;
   text-align: center;
   letter-spacing: 0.03em;
   color: #ffffff;
+}
+
+.program-title::before {
+  content: '';
+  position: absolute;
+  top: 84px;
+  left: 95px;
+  display: flex;
+  background-color: #ffffff;
+  width: 1292px;
+  height: 1px;
+  transform: rotate(90deg);
+  transform-origin: top left;
+}
+
+.program-list {
+  padding-left: 100px;
+  position: relative;
 }
 
 .program-list > li {
@@ -33,15 +65,37 @@
   margin-bottom: 40px;
 }
 
+.program-term::before {
+  content: '';
+  display: inline-block;
+  background-color: var(--accent-color);
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  margin-left: -31px;
+  margin-right: 20px;
+}
+
+.program-term-list {
+  margin-top: 5px;
+}
+
 .program-term-list > li {
   font-weight: 700;
   font-size: 12px;
-  line-height: 1.67;
-  // display: flex;
+  line-height: 2.67;
   align-items: center;
   letter-spacing: 0.08em;
   color: var(--accent-color);
   text-transform: none;
+}
+
+.program-term-list > li:not(:last-child) {
+  margin-bottom: 8px;
+}
+
+.program-content-list {
+  margin-top: 8px;
 }
 
 .program-content-item {
