--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,101 +1,130 @@
 <section class="program">  
-<div class="container">
-  <h2 class="program-title">Наша программа</h2>
-  <ul class="program-list list">
-    <li class="program-term">1 семестр
-        <ul class="program-term-list list">
-            <li class="program-content">Grammar
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Nouns & Articles</li>
-                    <li class="program-content-item">Adjectives & Adverb</li>
-                </ul>
-            </li>
-            <li class="program-content">Vocabulary
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Family & Relations</li>
-                    <li class="program-content-item">People & Society</li>
-                </ul> 
-            </li>
-        </ul>
-    </li>
-    <li class="program-term">2 семестр
-        <ul class="program-term-list list">
-            <li class="program-content">Grammar
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Pronouns</li>
-                    <li class="program-content-item">Active Voice</li>
-                    <li class="program-content-item">Passive Voice</li>
-                </ul>
-            </li>
-            <li class="program-content">Vocabulary
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Home</li>
-                    <li class="program-content-item">School</li>
-                    <li class="program-content-item">Work</li>
-                </ul> 
-            </li>
-        </ul>
-    </li>
-    <li class="program-term">3 семестр
-        <ul class="program-term-list list">
-            <li class="program-content">Grammar
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Modal verbs</li>
-                    <li class="program-content-item">Infinitive</li>
-                    <li class="program-content-item">Gerund</li>
-                    <li class="program-content-item">Participle: 1, 2</li>
-                </ul>
-            </li>
-            <li class="program-content">Vocabulary
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Travel & Tourism</li>
-                    <li class="program-content-item">Culture & Free Time</li>
-                    <li class="program-content-item">Sport</li>
-                </ul> 
-            </li>
-            <li class="program-content">Writing
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Informal Letter</li>
-                </ul> 
-            </li>
-        </ul>
-    </li>
-    <li class="program-term">4 семестр
-        <ul class="program-term-list list">
-            <li class="program-content">Grammar
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Clauses: Conditional and</li>
-                    <li class="program-content-item">Wishes</li>
-                    <li class="program-content-item">Direct / Reported speech</li>
-                    <li class="program-content-item">Preposition</li>
-                    <li class="program-content-item">Conjunction</li>
-                    <li class="program-content-item">Numeral</li>
-                </ul>
-            </li>
-            <li class="program-content">Vocabulary
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Healthy Living</li>
-                    <li class="program-content-item">Nature & Environment</li>
-                    <li class="program-content-item">Money</li>
-                </ul> 
-            </li>
-            <li class="program-content">Writing
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Formal Letter</li>
-                </ul> 
-            </li>
-        </ul>
-    </li>
-    <li class="program-term">5 семестр
-        <ul class="program-term-list list">
-            <li class="program-content">
-                <ul class="program-content-list list">
-                    <li class="program-content-item">Revision</li>
-                    <li class="program-content-item">Tests</li>
-                </ul>
-            </li>
-        </ul>
-    </li>
-</ul>
-  </div>
-</section>
+    <div class="container">
+      <h2 class="program-title">Наша программа</h2>
+      <ul class="program-list list">
+        <li class="program-term">1 семестр
+            <ul class="program-term-list list">
+                <li class="program-content">— Grammar
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Nouns & Articles</li>
+                        <li class="program-content-item">Adjectives & Adverb</li>
+                    </ul>
+                </li>
+                <li class="program-content">— Vocabulary
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Family & Relations</li>
+                        <li class="program-content-item">People & Society</li>
+                    </ul> 
+                </li>
+            </ul>
+        </li>
+        <li class="program-term">2 семестр
+            <ul class="program-term-list list">
+                <li class="program-content">— Grammar
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Pronouns</li>
+                        <li class="program-content-item">Active Voice</li>
+                        <li class="program-content-item">Passive Voice</li>
+                    </ul>
+                </li>
+                <li class="program-content">— Vocabulary
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Home</li>
+                        <li class="program-content-item">School</li>
+                        <li class="program-content-item">Work</li>
+                    </ul> 
+                </li>
+            </ul>
+        </li>
+        <li class="program-term">3 семестр
+            <ul class="program-term-list list">
+                <li class="program-content">— Grammar
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Modal verbs</li>
+                        <li class="program-content-item">Infinitive</li>
+                        <li class="program-content-item">Gerund</li>
+                        <li class="program-content-item">Participle: 1, 2</li>
+                    </ul>
+                </li>
+                <li class="program-content">— Vocabulary
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Travel & Tourism</li>
+                        <li class="program-content-item">Culture & Free Time</li>
+                        <li class="program-content-item">Sport</li>
+                    </ul> 
+                </li>
+                <li class="program-content">— Writing
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Informal Letter</li>
+                    </ul> 
+                </li>
+            </ul>
+        </li>
+        <li class="program-term">4 семестр
+            <ul class="program-term-list list">
+                <li class="program-content">— Grammar
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Clauses: Conditional and</li>
+                        <li class="program-content-item">Wishes</li>
+                        <li class="program-content-item">Direct / Reported speech</li>
+                        <li class="program-content-item">Preposition</li>
+                        <li class="program-content-item">Conjunction</li>
+                        <li class="program-content-item">Numeral</li>
+                    </ul>
+                </li>
+                <li class="program-content">— Vocabulary
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Healthy Living</li>
+                        <li class="program-content-item">Nature & Environment</li>
+                        <li class="program-content-item">Money</li>
+                    </ul> 
+                </li>
+                <li class="program-content">— Writing
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Formal Letter</li>
+                    </ul> 
+                </li>
+            </ul>
+        </li>
+        <li class="program-term">5 семестр
+            <ul class="program-term-list list">
+                <li class="program-content">—
+                    <ul class="program-content-list list">
+                        <li class="program-content-item">Revision</li>
+                        <li class="program-content-item">Tests</li>
+                    </ul>
+                </li>
+            </ul>
+        </li>
+    </ul>
+    <!-- <picture>
+        <source srcset="images/program/program-desktop.webp 1x, 
+        images/program/program-desktop@2x.webp 2x" type="image/webp"
+        media="(min-width: 1314px)">
+    
+        <source srcset="images/program/program-desktop.jpg 1x, 
+        images/program/program-desktop@2x.jpg 2x" type="image/jpeg"
+        media="(min-width: 1314px)">
+        
+        <source srcset="images/program/program-tablet.webp 1x, 
+        images/program/program-tablet@2x.webp 2x" type="image/webp"
+        media="(min-width: 688px)">
+    
+        <source srcset="images/program/program-tablet.jpg 1x, 
+        images/program/program-tablet@2x.jpg 2x" type="image/jpeg"
+        media="(min-width: 688px)">
+    
+        <source srcset="images/program/program-mobile.webp 1x, 
+        images/program/program-mobile@2x.webp 2x" type="image/webp"
+        media="(max-width: 687px)">
+    
+        <source srcset="images/program/program-mobile.jpg 1x, 
+        images/program/program-mobile@2x.jpg 2x" type="image/jpeg"
+        media="(max-width: 687px)"> -->
+    
+        <!-- <img class="program-img" alt="Проект2"
+        src="images/program/program-mobile.png"/> -->
+      <!-- </picture> -->
+      </div>
+    </section>
+        
