Доделана часть для мобилки

--- a/src/sass/layout/_advantage.scss
+++ b/src/sass/layout/_advantage.scss
@@ -5,7 +5,7 @@
 
 .advantages__title {
   padding-bottom: 30px;
-
+  font-family: Montserrat;
   font-style: normal;
   font-weight: 800;
   font-size: 20px;
@@ -33,11 +33,13 @@
   box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
 }
 
+.advantages-list__link {
+  color: var(--title-text-color);
+}
+
 .advantages-list__icon {
   display: block;
   margin: 0 auto 20px;
-  width: 40px;
-  height: 40px;
   fill: orange;
 }
 
@@ -54,6 +56,15 @@
   text-align: center;
   letter-spacing: 0.08em;
   color: var(--title-text-color);
+
+  &::after {
+    content: '';
+    display: block;
+    margin: 22px auto 19px;
+    width: 20px;
+    height: 2px;
+    background-color: orange;
+  }
 }
 
 .advantage-list__text {
