добавляю стили мобил. версии

--- a/src/partials/problems.html
+++ b/src/partials/problems.html
@@ -1,8 +1,8 @@
 <section class="section"> 
     <div class="container problems-container">
-        <h2 class="problems-title">Главные <span class="problems-word-color">проблемы</span> учеников 
-            на English ВНО, которые 
-            мы помогаем решить
+        <h2 class="problems-title">Главные проблемы учеников 
+            на English ВНО, которые <br>
+            мы <span class="problems-word-color">помогаем</span> решить
         </h2>
         <div class="problems-block-white">
         <ul class="problems-item">
