Верстка стилей контент

--- a/src/partials/page-problems.html
+++ b/src/partials/page-problems.html
@@ -1,6 +1,9 @@
 <section class="problems">
 <div class="container">
       <div class="problems-block">
+      <picture>
+        <img src="./images/problems/campfire.png" alt="огонь" width="455" height="472">
+      </picture>
       <h2 class="problems-title">Главные проблемы учеников <br> 
         на English ВНО, которые <br> мы <span class="problems-title-word">помогаем</span> решить
         </h2>
