--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -17,7 +17,7 @@
     top: 205px;
     left: auto;
     right: auto;
-    max-width: 280px;
+    width: 280px;
     height: 488px;    
     padding: 20px 14px 20px 30px;
     background-color: var(--primary-white-color);   
@@ -48,26 +48,17 @@
     }
 }
 .problems-title-word{
-    font-weight: 800;
-    font-size: 20px;
-    line-height: 1.3;
-    letter-spacing: 0.03em;
     color: var(--accent-color);
-    @media screen and (min-width:768px) {
-    font-size: 26px;
-   }
-    @media screen and (min-width:1344px) {
-    font-size: 46px;
-    }
 }
 .problems-item-title {    
     font-weight: 700;
-    font-size: 14px;
-    line-height: 1.649;
+    font-size: 20px;
+    line-height: 1.2;
     letter-spacing: 0.08em;
     color: var(--accent-color);
+    @media screen and (min-width:319px) and (max-width:1343px){
     &:not(:last-child) {
-    margin-bottom: 5px;}
+    margin-bottom: 5px;}}
     @media screen and (min-width:1344px) {
     font-size: 20px;    
     margin-bottom: 10px;}
@@ -80,9 +71,15 @@
     letter-spacing: 0.08em;
     color: var(--title-text-color);
     @media screen and (min-width:1344px) {
-        font-size: 20px;    
+    font-size: 20px;    
     }    
 }
+.problems-list {
+    @media screen and (min-width:768px) {
+        display: flex;
+        flex-wrap: wrap;        
+        justify-content: space-between;
+             }}
 .problems-item {
 @media screen and (min-width:319px) and (max-width:767px){
 &:not(:last-child) {        
@@ -90,15 +87,15 @@ margin-bottom: 10px;}
 }
 @media screen and (min-width:768px) and (max-width:1343px) {
 flex: 1 0 50%;
-}
+&:nth-child(-n+4){
+    margin-bottom: 8px;
+}}
 @media screen and (min-width:1344px){
-    flex: 1 0 33%;    
+    flex: 1 0 33%;
+    &:nth-child(-n+3) {
+    margin-bottom: 43px;
+    }   
         }}
 
-.problems-list {
-    @media screen and (min-width:768px) {
-        flex-wrap: wrap;
-        display: flex;
-        justify-content: space-between;
-             }}
+
 
