normalize sprite and add images

--- a/src/partials/how-we-do-it.html
+++ b/src/partials/how-we-do-it.html
@@ -53,7 +53,7 @@
                 <a href="#" class="how-we-do-list-item-link">
                     <div class="how-we-do-item-icon-container">
                         <svg class="how-we-do-item-icon support">
-                            <use href="./images/sprite.svg#psychological-support"></use>
+                            <use href="./images/sprite.svg#hand"></use>
                         </svg>
                     </div>
                     <div class="how-we-do-item-description">
