--- a/src/sass/layout/_we-solve.scss
+++ b/src/sass/layout/_we-solve.scss
@@ -131,9 +131,9 @@ li {
     width: 100%;
     height: 560px;
     margin-bottom: 280px;
-    // background-image: url(../images/fire-wesolve.png);
-    // background-repeat: no-repeat;
-    // background-position: right bottom;
+    background-image: url(../images/fire-wesolve.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
   }
 
   .we-solve-title {
