made last changes to footer section

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -39,19 +39,29 @@
       </button>
     </form>
   </div>
-  <div class="footer-contacts">
+  <div class="footer-contacts container">
     <a href="#" class="footer-logo">
-      <svg height="29" width="80">
-        <use href="./images/sprite.svg#mobile_dark-logo"></use>
+      <svg class="footer-svg-logo">
+        <use
+          class="footer-dark-logo"
+          href="./images/sprite.svg#mobile_dark-logo"
+        ></use>
+        <use
+          class="footer-accent-logo"
+          href="./images/sprite.svg#logo-desktop"
+        ></use>
       </svg>
     </a>
-    <a href="tel:+380000000000">
+
+    <a class="footer-tel-link" href="tel:+380000000000">
       <img
+        class="footer-tel-img"
         class="footer-tel"
         src="./images/footer-tel.svg"
         alt="контакний телефон"
     /></a>
-    <a href="#">
+
+    <a class="footer-insta-link" href="#">
       <img class="footer-insta" src="./images/instagram.svg" alt="Инстаграм" />
     </a>
   </div>
