--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -10,7 +10,7 @@
   padding-top: 50px;
   padding-bottom: 50px;
   width: 320px;
-  height: 507px;
+
   background-color: var(--title-text-color);
   background-image: url('../images/footer/bg-mobile.png');
   background-size: 320px 507px;
@@ -25,7 +25,6 @@
   @media screen and (min-width: 768px) {
     padding-bottom: 71px;
     width: 768px;
-    height: 520px;
 
     background-image: url('../images/footer/bg-tablet.png');
     background-size: 768px 520px;
@@ -42,10 +41,10 @@
     padding-bottom: 62px;
     max-width: 1680px;
     width: auto;
-    height: 840px;
 
     background-image: url('../images/footer/bg-desktop.png');
     background-size: cover;
+    background-position: center;
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -90,6 +89,7 @@
   }
 
   @media screen and (min-width: 1344px) {
+    max-width: 1000px;
     margin-bottom: 50px;
     font-size: 46px;
     line-height: 1.304;
@@ -167,7 +167,7 @@
     left: 217px;
   }
   @media screen and (min-width: 1344px) {
-    left: 641px;
+    left: 473px;
     font-size: 20px;
     line-height: 1.2;
   }
@@ -197,6 +197,8 @@
   }
 
   @media screen and (min-width: 1344px) {
+    width: 478px;
+    height: 70px;
     font-size: 20px;
     line-height: 1.2;
   }
@@ -211,7 +213,11 @@
 .footer-button {
   display: block;
   margin: 0 auto;
-  padding: 14px 9px;
+  padding-top: 14px;
+  padding-right: 9px;
+  padding-bottom: 14px;
+  padding-left: 9px;
+
   font-weight: 700;
   font-size: 12px;
   line-height: 1.25;
@@ -221,17 +227,63 @@
   border: none;
   color: var(--white-text-color);
   background-color: var(--accent-color);
+
+  @media screen and (min-width: 1344px) {
+    padding-top: 27px;
+    padding-right: 25px;
+    padding-bottom: 26px;
+    padding-left: 26px;
+  }
 }
 
 .footer-contacts {
   padding-top: 30px;
   padding-bottom: 30px;
   text-align: center;
+
+  @media screen and (min-width: 768px) {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .footer-logo {
   display: block;
   margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+}
+
+.footer-svg-logo {
+  width: 84px;
+  height: 30px;
+
+  @media screen and (min-width: 768px) {
+    width: 128px;
+    height: 45px;
+  }
+}
+
+.footer-tel-img {
+  display: inline-block;
+  margin: 0 auto;
+  width: 199px;
+  height: 20px;
+
+  @media screen and (min-width: 768px) {
+    width: 270px;
+    height: 24px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    width: 407px;
+    height: 40px;
+  }
 }
 
 .footer-tel,
@@ -242,6 +294,52 @@
 
 .footer-tel {
   margin-bottom: 30px;
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+  }
+}
+
+.footer-tel-link {
+  display: block;
+  margin-bottom: 30px;
+  @media screen and (min-width: 768px) {
+    margin-bottom: 0;
+    margin-left: auto;
+    padding-right: 24px;
+    border-right: 1px solid #b9b9b9;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-right: 16px;
+  }
+}
+
+.footer-insta-link {
+  display: inline-block;
+  @media screen and (min-width: 768px) {
+    padding-left: 24px;
+  }
+
+  @media screen and (min-width: 1344px) {
+    margin-right: 424px;
+  }
+}
+
+.footer-accent-logo {
+  display: none;
+
+  @media screen and (min-width: 768px) {
+    display: block;
+  }
+}
+
+.footer-dark-logo {
+  display: block;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .copyright {
@@ -266,6 +364,6 @@
 
   @media screen and (min-width: 1344px) {
     width: 1344px;
-    padding-left: 183px;
+    padding-left: 15px;
   }
 }
