--- a/src/partials/registration-form.html
+++ b/src/partials/registration-form.html
@@ -1,4 +1,4 @@
-<section class="registration-form">
+<section class="registration-form" id="free-lesson">
     <div class="container">
         <div>
             <p class="registration-form-description">Регистрация на <span class="registration-form-accent">бесплатную</span>
