Добавил стили кнопки

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,6 +5,7 @@
 //base
 @import './base/common';
 @import './base/container';
+@import './base/button';
 //components
 @import './components/section';
 @import './components/logo';
