--- a/src/sass/layouts/_program.scss
+++ b/src/sass/layouts/_program.scss
@@ -3,19 +3,36 @@
   padding-top: 50px;
   padding-bottom: 537px;
   background-color: $dark-bg;
-  background-image: url(../images/program/main-pic-1.png);
+  background-image: url('./../images/program/main-pic-1.png');
   background-repeat: no-repeat;
   background-position: 193px 1509px;
   background-size: 186px 137px;
 
+  @media screen and (min-device-pixel-ratio: 2) and (min-width: 320px),
+    screen and (min-resolution: 192dpi) and (min-width: 320px),
+    screen and (min-resolution: 2dppx) and (min-width: 320px) {
+    background-image: url('./../images/program/main-pic-1@2x.png');
+  }
+
   @media screen and (min-width: 768px) {
     padding-top: 60px;
-    background-position: 450px 861px;
+    padding-bottom: 392px;
+    background-position: 450px 846px;
     background-size: 384px 240px;
   }
 
   @media screen and (min-width: 1314px) {
     padding-top: 120px;
+    padding-bottom: 364px;
+    background-image: url('./../images/program/main-pic-1desk.png');
+    background-position: -257px 721px;
+    background-size: 760px 502px;
+
+    @media screen and (min-device-pixel-ratio: 2) and (min-width: 1314px),
+      screen and (min-resolution: 192dpi) and (min-width: 1314px),
+      screen and (min-resolution: 2dppx) and (min-width: 1314px) {
+      background-image: url('./../images/program/main-pic-1desk@2x.png');
+    }
   }
 }
 
@@ -64,6 +81,18 @@
 @media screen and (min-width: 1314px) {
   .program-list-wrapper {
     display: flex;
+    position: relative;
+    width: 1232px;
+  }
+
+  .program-list-wrapper::before {
+    content: '';
+    background-color: rgba(255, 255, 255, 0.5);
+    width: 1069px;
+    height: 1px;
+    position: absolute;
+    top: -41px;
+    left: 8px;
   }
 }
 
@@ -73,7 +102,7 @@
 
 .program-subtitle::before {
   content: '';
-  background-image: url('../images/program/ellipse-6.svg');
+  background-image: url('./../images/program/ellipse-6.svg');
   width: 12px;
   height: 12px;
   position: absolute;
@@ -82,6 +111,11 @@
 
   @media screen and (min-width: 768px) and (max-width: 1313px) {
     left: -52px;
+  }
+
+  @media screen and (min-width: 1314px) {
+    top: -48px;
+    left: -3px;
   }
 }
 
@@ -99,6 +133,7 @@
   }
   @media screen and (min-width: 1314px) {
     font-size: 46px;
+    margin-bottom: 150px;
   }
 }
 
@@ -112,17 +147,38 @@
 
   @media screen and (min-width: 768px) and (max-width: 1313px) {
     display: flex;
+    &:last-child {
+      margin-bottom: 189px;
+    }
+  }
+
+  @media screen and (min-width: 1314px) {
+    margin-left: 0;
+    margin-right: 30px;
+
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
 
 .program-subtitle {
   margin-bottom: 5px;
 
-  @include font('Montserrat', normal, 700, 14px, 2);
+  @include font('Montserrat', normal, 500, 14px, 2);
   letter-spacing: 0.08em;
   text-transform: uppercase;
 
   color: $white-font;
+
+  @media screen and (min-width: 1314px) {
+    margin-bottom: 25px;
+    font-size: 20px;
+
+    .program-number {
+      font-size: 30px;
+    }
+  }
 }
 
 .program-subtitle-list {
@@ -136,6 +192,12 @@
   @media screen and (min-width: 768px) {
     width: 176px;
     margin-bottom: 0;
+  }
+
+  @media screen and (min-width: 1314px) {
+    width: 240px;
+    margin-bottom: 25px;
+    font-size: 20px;
   }
 }
 
@@ -157,71 +219,27 @@
 
   color: $light-font;
   opacity: 0.5;
-}
 
-.program-wrapper {
-  position: absolute;
-  bottom: -152px;
-  left: 18px;
-
-  @media screen and (min-width: 768px) and (max-width: 1313px) {
-    bottom: -192px;
+  @media screen and (min-width: 1314px) {
+    font-size: 18px;
   }
 }
 
 .program-wrapper-title {
-  width: 140px;
-  margin-bottom: 30px;
-
   @include font('Montserrat', normal, 800, 20px, 1.3);
   letter-spacing: 0.03em;
 
   color: $white-font;
-}
 
-.features-overlay {
-  width: 280px;
-  padding: 20px 34px;
-  background-color: #ffffff;
-  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-}
+  @media screen and (max-width: 767px) {
+    width: 140px;
+  }
 
-.features-item {
-  margin-bottom: 20px;
+  @media screen and (min-width: 768px) {
+    font-size: 26px;
+  }
 
-  &:last-child {
-    margin-bottom: 0;
+  @media screen and (min-width: 1314px) {
+    display: none;
   }
 }
-
-.features-number {
-  @include font('Montserrat', normal, 700, 14px, 1.643);
-  letter-spacing: 0.08em;
-
-  color: $orange;
-}
-
-.features-text {
-  @include font('Montserrat', normal, 700, 14px, 1.43);
-  letter-spacing: 0.08em;
-
-  color: $dark-font;
-}
-
-// @media screen and (min-width: 767px) {
-//   .features-overlay {
-//     min-width: 688px;
-//     height: 303px;
-//     padding: 30px 90px 26px;
-//   }
-//   .features-overlay .features-list {
-//     display: flex;
-//     flex-wrap: wrap;
-//   }
-//   .features-overlay .features-item {
-//     width: 250px;
-//   }
-//   .features-list-item:nth-child(even) {
-//     margin-left: 20px;
-//   }
-// }
