разметка и стили секции problems

--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -1,1 +1,74 @@
 
+.container {
+    padding: 50px 20px;
+
+}
+ 
+.list {list-style: none;}
+
+h1 {margin: 0;}
+
+ul, ol {
+    margin: 0;
+    padding: 0;
+}
+
+.problem {
+    position: relative;
+    margin-bottom: 198px;
+    min-width: 320px;
+    height: 545px;
+    background-color: #111518;
+
+}
+
+.problem-title {
+    margin-bottom: 27px;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 20px;
+    line-height: 1.35;    
+    letter-spacing: 0.03em;
+    
+    color: #FFFFFF;  
+    
+    &-item {        
+        color: #FF6B09;
+    }
+
+}
+
+.problem-list-container {
+    position: absolute;
+    padding: 20px 14px 20px 30px;
+    min-width: 280px;
+    height: 488px;
+    left: 50%;
+    top: 79%;
+    transform: translate(-50%, -50%) scale(1); 
+    background-color: #FFFFFF;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+
+}
+
+// .problem-list {
+
+// }
+
+.problem-item {
+    display: flex;
+    align-items: center;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.714;
+
+    letter-spacing: 0.08em;
+    
+    color: #111518;    
+}
+
+
