--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -17,6 +17,7 @@
 @import './home';
 @import './products';
 @import './production';
+@import './galary_photo';
 @import './galary';
 @import './locations';
 @import './footer';
