--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -1,2 +1,28 @@
-<h2>tradition and love</h2>
-<h3>how it’s made?</h3>
+<section class="how-made">
+	<div class=".container">
+		<h2>tradition and love</h2>
+		<h3>how it’s made?</h3>
+		<img src="" alt="корова">
+		<p>Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus, faucibus lorem eget, egestas eros. Maecenas eleifend erat at justo fringilla.</p>
+		<p>Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus orci in imperdiet placerat. Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.</p>
+		<p>Aliquam erat volutpat. Aenean accumsan.</p>
+		<a href="#">Read more </a>
+		<ul>
+			<li>
+				<img src="#" alt="">
+				<p>721</p>
+				<p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+			</li>
+			<li>
+				<img src="#" alt="">
+				<p>16kg</p>
+				<p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+			</li>
+			<li>
+				<img src="#" alt="">
+				<p>84</p>
+				<p>Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
+			</li>
+		</ul>
+	</div>	
+</section>
