--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,1 +1,13 @@
-<h2>isdfi</h2>
+<section class="reviews">
+    <div class="container">
+        <div class="reviews-foto"></div>
+        <div>
+            <div class="reviews-commit">
+                <p>Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan
+                congue. Lorem ipsum primis in nibh vel risus.</p>
+            </div>
+        </div>
+        <div class="reviews-name">
+            <span>Emily, Los Angeles</span>
+    </div>
+</section>
