--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) {
+@media screen and (max-width: 768px) {
   .garant__title {
     font-style: normal;
     font-weight: 800;
@@ -52,7 +52,7 @@
   margin-bottom: 20px;
 }
 .comments-list {
-  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.1);
 }
 .comments .comments-main-foto__main-foto {
   // outline: 1px solid green;
