--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -79,8 +79,44 @@
                                            <a href="#"><span>Читать дальше</span> </a> 
                                             </p>                                            
                                         </li>
-                                    </ul>
+                                    </ul>                                                
                                 </div>
+                                    <ul class="comments-under__list list">
+                                        <li class="comments-under__left-arrow">
+                                            <a href="#">
+                                                <svg class="comments-under__icon-left-arrow">
+                                                    <use href="./images/sprite.svg#icon-arrow_left" width="20" height="20"></use>
+                                                </svg>
+                                            </a>
+                                            
+                                        </li>
+
+                                        <li class="comments-under__item">
+                                            <img class="comments-main-foto__main-foto" 
+                                            src="./images/comments/girl_1.png" width="30" height="30"
+                                                alt="фото Тоня Кучерявская">
+                                        </li>
+
+                                        <li class="comments-under__item">
+                                            <img class="comments-main-foto__main-foto" 
+                                            src="./images/comments/girl_2.png" width="30" height="30"
+                                                alt="фото Тоня Кучерявская">
+                                        </li>
+
+                                        <li class="comments-under__item">
+                                            <img class="comments-main-foto__main-foto" 
+                                            src="./images/comments/girl_3.png" width="30" height="30"
+                                                alt="фото Тоня Кучерявская">
+                                        </li>
+
+                                        <li class="comments-under__right-arrow">
+                                            <a href="#">
+                                                <svg class="comments-under__icon-right-arrow">
+                                                    <use href="./images/sprite.svg#icon-arrow_right" width="20" height="20"></use>
+                                                </svg>
+                                            </a>
+                                        </li>
+                                    </ul>
                         </div>
                     </section>
 
