--- a/src/sass/layout/_page-how-do.scss
+++ b/src/sass/layout/_page-how-do.scss
@@ -1,20 +1,58 @@
+.how-do {
+  background-color: var(--primary-background-color);
+}
+.how-do-title {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.how-do-list-item:hover,
+.how-do-list-item:focus {
+  background-color: var(--accent-color);
+  & .how-do-icon,
+  & .how-do-icon {
+    fill: var(--primary-white-color);
+  }
+  & .skills-title,
+  & .skills-title {
+    color: var(--primary-white-color);
+  }
+  & .skills-title::after,
+  & .skills-title::after {
+    background-color: var(--primary-white-color);
+  }
+  & .skills-text,
+  & .skills-text {
+    color: var(--primary-white-color);
+  }
+}
+.how-do-list-item:hover .how-do-icon,
+.how-do-list-item:focus .how-do-icon {
+  fill: var(--primary-white-color);
+}
+
 @media screen and (max-width: 767px) {
   .how-do {
     padding-top: 50px;
     padding-bottom: 50px;
   }
-  .how-do .how-do-title {
+  .how-do-title {
     font-weight: 800;
     font-size: 20px;
     line-height: 1.3;
-    text-align: center;
+
     letter-spacing: 0.03em;
     color: var(--title-text-color);
-    background-color: var(--primary-background-color);
-    margin-bottom: 30px;
   }
   .how-do-list-item {
-    max-height: 280px;
+    height: 280px;
+    margin: 0 auto;
+    padding-top: 30px;
+    padding-bottom: 25px;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-align: center;
+    background-color: var(--primary-white-color);
+    box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
     &:not(:last-child) {
       margin-bottom: 15px;
     }
@@ -22,59 +60,35 @@
 
   .how-do-icon {
     display: block;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 45px;
     height: 48px;
-    margin-bottom: 30px;
-    background-color: var(--primary-white-color);
-
+    margin-bottom: 20px;
     fill: var(--accent-color);
-    // .how-do-card &:focus,
-    // .how-do-card &:hover {
-    //   fill: var(--primary-white-color);
-    // }
   }
-  .how-do-card {
-    padding-top: 30px;
-    padding-bottom: 20px;
-    text-align: center;
-    background-color: var(--primary-white-color);
-    box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
-  }
+
   .skills-title {
     position: relative;
     font-weight: 700;
     font-size: 14px;
-
+    line-height: 1.43;
     text-align: center;
     letter-spacing: 0.08em;
     color: var(--title-text-color);
-    margin-bottom: 25px;
+    margin-bottom: 42px;
+
     &::after {
-      content: '\2014';
+      content: ' ';
       position: absolute;
-      left: 50%;
-      height: 32px;
+      display: block;
+      bottom: -50%;
+      right: 46%;
+      width: 20px;
+      height: 2px;
 
-      bottom: -35px;
-      font-weight: 700;
-
-      line-height: 1.65;
-
-      align-items: center;
-      text-align: center;
       letter-spacing: 0.08em;
-      color: var(--accent-color);
-      .how-do-card &:hover,
-      .how-do-card &:focus {
-        color: var(--primary-white-color);
-      }
+      background-color: var(--accent-color);
     }
-    // .how-do-card &:hover,
-    // .how-do-card &:focus {
-    //   color: var(--primary-white-color);
-    // }
   }
   .skills-text {
     font-weight: 500;
@@ -84,15 +98,7 @@
     text-align: center;
     letter-spacing: 0.08em;
     color: var(--secondary-text-color);
-    // .how-do-card &:hover,
-    // .how-do-card &:focus {
-    //   color: var(--primary-white-color);
-    // }
-  }
-  .how-do-list :hover,
-  .how-do-list :focus {
-    background-color: var(--accent-color);
-    fill: var(--primary-white-color);
-    color: var(--primary-white-color);
+    padding-left: 2px;
+    padding-right: 1px;
   }
 }
