исправления своей секции

--- a/src/sass/components/_gallery.scss
+++ b/src/sass/components/_gallery.scss
@@ -26,7 +26,7 @@
   screen and (-o-min-device-pixel-ratio: 2/1),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx) {
-  .hero {
+  .gallery {
     background-image: url('../images/gallery/gallery@x2-mob-min.jpg');
     @media screen and (min-width: 768px) and (max-width: 1199px) {
       background-image: url('../images/gallery/gallery@x2-tab-min.jpg');
