--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -30,18 +30,12 @@
 }
 
 .features-overlay .features-number {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.643;
+  @include font('Montserrat', normal, 700, 14px, 1.643);
   letter-spacing: 0.08em;
   color: $orange;
 }
 .features-overlay .features-text {
-  font-style: normal;
-  font-weight: bold;
-  font-size: 14px;
-  line-height: 1.714;
+  @include font('Montserrat', normal, 700, 14px, 1.43);
   letter-spacing: 0.08em;
   color: $dark-font;
 }
@@ -68,7 +62,7 @@
 
   .features-overlay {
     max-width: 688px;
-    padding: 30px 46px 26px 96px;
+    padding: 30px 100px;
 
     & .features-list {
       display: flex;
