--- a/src/partials/how-made.html
+++ b/src/partials/how-made.html
@@ -1,5 +1,5 @@
 <section class="how-made">
-	<div class=".container">
+	<div class="container">
 		<h2>tradition and love</h2>
 		<h3>how it’s made?</h3>
 		<img src="" alt="корова">
