--- a/src/sass/layouts/_problems.scss
+++ b/src/sass/layouts/_problems.scss
@@ -63,6 +63,7 @@
   .features-overlay {
     max-width: 688px;
     padding: 30px 100px;
+    box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
 
     & .features-list {
       display: flex;
