--- a/src/partials/we_garants_comments.html
+++ b/src/partials/we_garants_comments.html
@@ -81,31 +81,32 @@
                                         </li>
                                     </ul>                                                
                                 </div>
+                                
                                     <ul class="comments-under__list list">
                                         <li class="comments-under__left-arrow">
                                             <a href="#">
                                                 <svg class="comments-under__icon-left-arrow">
-                                                    <use href="./images/sprite.svg#icon-arrow_left" width="20" height="20"></use>
+                                                    <use href="./images/sprite.svg#icon-arrow_left" ></use>
                                                 </svg>
                                             </a>
-                                            
+                                            <!-- width="25" height="20" -->
                                         </li>
 
                                         <li class="comments-under__item">
-                                            <img class="comments-main-foto__main-foto" 
-                                            src="./images/comments/girl_1.png" width="30" height="30"
+                                            <img class="comments-under-foto__under-foto" 
+                                            src="./images/comments/girl_1.png" width="54" height="54"
                                                 alt="фото Тоня Кучерявская">
                                         </li>
 
                                         <li class="comments-under__item">
-                                            <img class="comments-main-foto__main-foto" 
-                                            src="./images/comments/girl_2.png" width="30" height="30"
+                                            <img class="comments-under-foto__under-foto" 
+                                            src="./images/comments/girl_2.png" width="54" height="54"
                                                 alt="фото Тоня Кучерявская">
                                         </li>
 
                                         <li class="comments-under__item">
-                                            <img class="comments-main-foto__main-foto" 
-                                            src="./images/comments/girl_3.png" width="30" height="30"
+                                            <img class="comments-under-foto__under-foto" 
+                                            src="./images/comments/girl_3.png" width="54" height="54"
                                                 alt="фото Тоня Кучерявская">
                                         </li>
 
