--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -40,7 +40,7 @@
     height: 20px;
   }
 }
-
+// =========
 .comments__title {
   font-style: normal;
   font-weight: 800;
@@ -110,4 +110,21 @@
   display: inline-block;
   color: var(--orange-color);
   text-decoration: underline;
+}
+// =========
+.comments-under__list {
+  margin-top: 20px;
+  margin-bottom: 200px;
+  display: flex;
+  justify-content: center;
+}
+.comments-under__icon-left-arrow {
+  margin-right: 30px;
+  max-width: 25px;
+  max-height: 30px;
+}
+.comments-under__icon-right-arrow {
+  margin-left: 30px;
+  max-width: 25px;
+  max-height: 30px;
 }
