--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,8 +9,8 @@
         EN<br />
         <span class="logo-description">адский английский</span>
       </a>
-      <div class="header-menu-container">
-        <!-- <ul class="header-nav-list">
+      <div class="header-menu-container" id="menu-container" data-menu>
+        <ul class="header-nav-list">
           <li class="header-nav-list-item">
             <a href="#" class="header-nav-link">Программа обучения</a>
           </li>
@@ -23,23 +23,28 @@
           <li class="header-nav-list-item">
             <a href="#" class="header-nav-link">Контакты</a>
           </li>
-        </ul> -->
-        <!-- <a href="#" class="header-cosult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a> -->
-
-        <button type="button" class="menu-button">
-          <svg
-            width="20px"
-            height="20px"
-            aria-label="Переключатель мобильного меню"
-          >
-            <use class="icon-menu" href="./images/sprite.svg#icon-burger"></use>
-            <use
-              class="icon-cross"
-              href="./images/sprite.svg#icon-burger-close"
-            ></use>
-          </svg>
-        </button>
+        </ul>
+        <a href="#" class="header-consult-link">КОНСУЛЬТАЦИЯ ПО ТЕЛЕФОНУ</a>
       </div>
+      <button
+        type="button"
+        class="menu-button"
+        aria-label="Меню"
+        aria-controls="menu-container"
+        data-menu-button
+      >
+        <svg
+          width="20px"
+          height="20px"
+          aria-label="Переключатель мобильного меню"
+        >
+          <use class="icon-menu" href="./images/sprite.svg#icon-burger"></use>
+          <use
+            class="icon-cross"
+            href="./images/sprite.svg#icon-burger-close"
+          ></use>
+        </svg>
+      </button>
     </nav>
   </div>
 </header>
