--- a/src/sass/components/_problems.scss
+++ b/src/sass/components/_problems.scss
@@ -3,6 +3,10 @@
     padding-top: 50px;
     height: 545px;
     background-color: var(--title-text-color);
+    background-image: url(../images/problems/campfire.png);
+    background-repeat: no-repeat;
+    background-position: right bottom;
+    background-size: 455px 472px;
     @media screen and (min-width:768px) {
     padding-top: 60px;
     height: 340px;
@@ -17,12 +21,14 @@
     top: 205px;
     left: auto;
     right: auto;
-    width: 280px;
+    max-width: 280px;
     height: 488px;    
     padding: 20px 14px 20px 30px;
     background-color: var(--primary-white-color);   
     @media screen and (min-width:768px) {
     top: 188px;
+    display: flex;
+    align-content: space-between;
     max-width: 688px; 
     height: 303px;
     padding: 30px 46px 26px 96px;     
@@ -74,28 +80,22 @@
     font-size: 20px;    
     }    
 }
-.problems-list {
-    @media screen and (min-width:768px) {
-        display: flex;
-        flex-wrap: wrap;        
-        justify-content: space-between;
-             }}
 .problems-item {
 @media screen and (min-width:319px) and (max-width:767px){
 &:not(:last-child) {        
 margin-bottom: 10px;}
 }
 @media screen and (min-width:768px) and (max-width:1343px) {
-flex: 1 0 50%;
-&:nth-child(-n+4){
-    margin-bottom: 8px;
-}}
+flex: 1 0 50%;}
 @media screen and (min-width:1344px){
-    flex: 1 0 33%;
-    &:nth-child(-n+3) {
-    margin-bottom: 43px;
+    flex: 1 0 33%;   
     }   
-        }}
+        }
 
-
+.problems-list {
+    @media screen and (min-width:768px) {
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: space-between;
+             }}
 
