--- a/src/sass/layout/_garant.scss
+++ b/src/sass/layout/_garant.scss
@@ -28,11 +28,8 @@
     font-size: 12px;
     line-height: 20px;
   }
-  // .feature-list__item:first-child::before {
-  //   display: flex;
-  // }
+
   .feature-list__description {
-    // display: flex;
     margin-left: 20px;
   }
   .feature-list__icon {
@@ -40,7 +37,7 @@
     height: 20px;
   }
 }
-// =========
+// =========2 секция
 .comments__title {
   font-style: normal;
   font-weight: 800;
