--- a/src/partials/registration.html
+++ b/src/partials/registration.html
@@ -14,6 +14,6 @@
     <form action="#" class="registration-form">
         <input type="text" name="user_name" class="registration-form__input registration-form__input--name" placeholder="Имя*" required>
         <input type="tel" name="user_phone" class="registration-form__input registration-form__input-tel" placeholder="Телефон*" required>
-        <button type="submit" class="registration-form__btn">хочу на бесплатное занятие</button>
+        <button type="submit" class="registration-form__btn button">хочу на бесплатное занятие</button>
     </form>
 </section>
