--- a/src/partials/section-teacher.html
+++ b/src/partials/section-teacher.html
@@ -6,18 +6,26 @@
       <picture>
         <source
           srcset="
+            ./images/teacher/teacher1200@1x.jpg 1x,
+            ./images/teacher/teacher1200@2x.jpg 2x
+          "
+          media="(min-width: 1344px)"
+        />
+        <source
+          srcset="
             ./images/teacher/teacher1200@1x.webp 1x,
             ./images/teacher/teacher1200@2x.webp 2x
           "
           media="(min-width: 1344px)"
           type="image/webp"
         />
+
         <source
           srcset="
-            ./images/teacher/teacher1200@1x.jpg 1x,
-            ./images/teacher/teacher1200@2x.jpg 2x
+            ./images/teacher/teacher320@1x.jpg 1x,
+            ./images/teacher/teacher320@2x.jpg 2x
           "
-          media="(min-width: 1344px)"
+          media="(min-width: 319px)"
         />
         <source
           srcset="
@@ -27,14 +35,6 @@
           media="(min-width: 319px)"
           type="image/webp"
         />
-        <source
-          srcset="
-            ./images/teacher/teacher320@1x.jpg 1x,
-            ./images/teacher/teacher320@2x.jpg 2x
-          "
-          media="(min-width: 319px)"
-        />
-
         <img
           class="image-teacher"
           src="./images/teacher/teacher320@1x.jpg"
@@ -44,21 +44,12 @@
       <div class="teacher-list-container">
         <h3 class="teacher-name">Елена Морева</h3>
         <ul class="teacher-list list">
-          <svg class="teacher-vector" width="14px" height="17px">
-            <use href="./images/sprite.svg#Vector"></use>
-          </svg>
           <li class="teacher-list-item">
             Опыт подготовки учеников к ВНО - 6 лет
           </li>
-          <svg class="teacher-vector" width="14px" height="17px">
-            <use href="./images/sprite.svg#Vector"></use>
-          </svg>
-          <li class="teacher-list-item">
+          <li class="teacher-list-item list">
             Собственный результат сдачи ВНО - 197 баллов 2 года подряд
           </li>
-          <svg class="teacher-vector" width="14px" height="17px">
-            <use href="./images/sprite.svg#Vector"></use>
-          </svg>
           <li class="teacher-list-item">
             Сдала на отлично международный аналог ВНО - Кембриджский PET
             (Preliminary English Test)
@@ -68,47 +59,54 @@
         <div class="teacher-list-container">
           <p class="teacher-list-container-text">
             Высшее образование получила в Институте международных отношений НАУ
-            по специальности переводчик-аналитик. В свободное время проходит
-            курсы от лучших университетов мира по эффективному преподаванию и
-            методикам написания сочинений. В числе пройденных: English Grammar
-            and Essay Writing (Berkeley), English Grammar&Style (The University
-            of Queesland), How to Write an Essay (Berkeley), Academic and
-            Business Writing (Berkeley), The Art of Teaching (GEMS education),
-            Powerful Tools for Teaching and Learning (University of Houston).
+            по специальности переводчик-аналитик.
           </p>
+          <p class="teacher-list-container-text">
+            В свободное время проходит курсы от лучших университетов мира по
+            эффективному преподаванию и методикам написания сочинений.
+          </p>
+          <p class="teacher-list-container-text">
+            В числе пройденных: English Grammar and Essay Writing (Berkeley),
+            English Grammar&Style (The University of Queesland), How to Write an
+            Essay (Berkeley), Academic and Business Writing (Berkeley), The Art
+            of Teaching (GEMS education), Powerful Tools for Teaching and
+            Learning (University of Houston).
+          </p>
+          <a class="teacher-link" href="#"
+            >Cambrige English Entry Level Certificate</a
+          >
         </div>
-        <a class="teacher-link" href="#"
-          >Cambrige English Entry Level Certificate</a
-        >
       </div>
     </div>
   </div>
 </section>
 <!--Мы гарантируем-->
-<!--
+
 <section class="section guarantee">
+  <h2 class="subtitle">Мы гарантируем</h2>
   <div class="container">
-    <h2 class="subtitle">Мы гарантируем</h2>
-    <ul class="guarantee-list list">
-      <li class="guarantee-list-item">
-        Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
-        тестировании. Иначе мы вернем деньги. <span class="color-span">*</span>
-      </li>
-      <li class="guarantee-list-item">
-        Ты научишься писать сочинения минимум на 10 баллов из 14.
-        <span class="color-span"
-          >В то время как 20% учеников получили за сочинение 0.</span
-        >
-      </li>
-      <li class="guarantee-list-item">
-        Ты будешь заниматься в своем районе. Мы выберем место проведения занятий
-        после формирования команд.
-      </li>
-      <li class="guarantee-list-item">
-        Команды будут сформированы, исходя из начального уровня учеников. Мы
-        учитываем особенности каждого ученика.
-      </li>
-    </ul>
+    <div class="guarantee-container-list">
+      <ul class="guarantee-list list">
+        <li class="guarantee-list-item">
+          Ты сдашь ВНО минимум на 25 баллов лучше, чем на первом пробном
+          тестировании. Иначе мы вернем деньги.
+          <span class="color-span">*</span>
+        </li>
+        <li class="guarantee-list-item">
+          Ты научишься писать сочинения минимум на 10 баллов из 14.
+          <span class="color-span"
+            >В то время как 20% учеников получили за сочинение 0.</span
+          >
+        </li>
+        <li class="guarantee-list-item">
+          Ты будешь заниматься в своем районе. Мы выберем место проведения
+          занятий после формирования команд.
+        </li>
+        <li class="guarantee-list-item">
+          Команды будут сформированы, исходя из начального уровня учеников. Мы
+          учитываем особенности каждого ученика.
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
--->
