Sprite svg was create

--- a/src/partials/general-problem.html
+++ b/src/partials/general-problem.html
@@ -1,39 +1,41 @@
 <section class="general-problem container">
-  <div>
+  <div class="general-problem-content">
+    <h2>Главные проблемы учеников
+      на English ВНО, которые
+      мы <span>помогаем</span> решить
+    </h2>
+    <ul>
+      <li>
+        <h3>— 01</h3>
+        <p>Незнание грамматики</p>
+      </li>
+      <li>
+        <h3>— 02</h3>
+        <p>Неумение воcпринимать
+          устную английскую речь</p>
+      </li>
+      <li>
+        <h3>— 03</h3>
+        <p>Скупой словарный запас
+          для написании сочинения</p>
+      </li>
+      <li>
+        <h3>— 04</h3>
+        <p>Подготовка в одиночку</p>
+      </li>
+      <li>
+        <h3>— 05</h3>
+        <p>Отсутствие единого ресурса знаний</p>
+      </li>
+      <li>
+        <h3>— 06</h3>
+        <p>Недостаток самоорганизации и лень</p>
+      </li>
+    </ul>
+  </div>
+  <div class="general-problem-background">
     <svg>
-      <use href="/images/general-problem/fire.svg"></use>
+      <use href="/images/general-problem/sprite.svg#fire"></use>
     </svg>
   </div>
-  <h2>Главные проблемы учеников
-    на English ВНО, которые
-    мы <span>помогаем</span> решить
-  </h2>
-  <ul>
-    <li>
-      <h3>— 01</h3>
-      <p>Незнание грамматики</p>
-    </li>
-    <li>
-      <h3>— 02</h3>
-      <p>Неумение воcпринимать
-        устную английскую речь</p>
-    </li>
-    <li>
-      <h3>— 03</h3>
-      <p>Скупой словарный запас
-        для написании сочинения</p>
-    </li>
-    <li>
-      <h3>— 04</h3>
-      <p>Подготовка в одиночку</p>
-    </li>
-    <li>
-      <h3>— 05</h3>
-      <p>Отсутствие единого ресурса знаний</p>
-    </li>
-    <li>
-      <h3>— 06</h3>
-      <p>Недостаток самоорганизации и лень</p>
-    </li>
-  </ul>
 </section>
