--- a/src/sass/layout/_general-problem.scss
+++ b/src/sass/layout/_general-problem.scss
@@ -1,8 +1,24 @@
 .general-problem {
-  @media screen and(min-width: 320px) and (max-width: 767px) {
+  &-content {
+    & > h2 {
+      // color: $white;
+      @include font(800, 20px, 1.36, left, 0.03em);
+    }
   }
-  @media screen and(min-width: 768px) and (max-width: 1687px) {
+  &-background {
+    background-color: $black;
+    // z-index: -1;
   }
-  @media screen and(min-width: 1688px) {
+  @media screen and(min-width: 768px) {
+    & > h2 {
+      color: $white;
+      @include font(800, 26px, 1.3, left, 0.03em);
+    }
+  }
+  @media screen and(min-width: 1680px) {
+    & > h2 {
+      color: $white;
+      @include font(800, 46px, 1.3, left, 0.03em);
+    }
   }
 }
