--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -3,6 +3,25 @@
  * Главный файл стилей.
  * Все паршалы подключаются сюда.
  */
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  -webkit-clip-path: inset(100%);
+          clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  font-style: normal;
+}
+
 a {
   text-decoration: none;
 }
@@ -33,42 +52,244 @@ textarea {
   resize: none;
 }
 
+html {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+body {
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: 0.08em;
+  color: #b9b9b9;
+}
+
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+          box-sizing: inherit;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+  outline: none;
+}
+
+a:hover, a:focus {
+  color: #ff6b09;
+}
+
+.orange {
+  color: #ff6b09;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+img {
+  display: block;
+  min-width: 100%;
+  height: auto;
+}
+
+textarea {
+  resize: none;
+}
+
 .container {
   margin: 0 auto;
-  padding: 0 20px;
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (min-width: 320px) and (max-width: 767px) {
   .container {
-    width: 480px;
+    width: 320px;
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
+@media screen and (min-width: 768px) and (max-width: 1687px) {
   .container {
     width: 768px;
-    padding: 0 40px;
   }
 }
 
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 1688px) {
   .container {
-    width: 1200px;
-    padding: 0 183px;
+    width: 1688px;
   }
 }
 
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
+.container {
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.advantages__title {
+  padding-bottom: 30px;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.advantages-list {
+  margin: 0 auto;
   padding: 0;
-  white-space: nowrap;
-  -webkit-clip-path: inset(100%);
-          clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
+}
+
+.advantages-list__item {
+  margin: 0 auto;
+  width: 280px;
+  height: 280px;
+  padding-top: 30px;
+  padding-bottom: 22px;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-bottom: 15px;
+  background: var(--white-text-color);
+  -webkit-box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+}
+
+.advantages-list__icon {
+  display: block;
+  margin: 0 auto 20px;
+  width: 40px;
+  height: 40px;
+  fill: orange;
+}
+
+.advantages-list__title {
+  margin-bottom: 0;
+  margin-top: 0;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.429;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--title-text-color);
+}
+
+.advantage-list__text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  text-align: center;
+  letter-spacing: 0.08em;
+  color: var(--primary-text-color);
+}
+
+.general-problem > div {
+  background-color: #111518;
+}
+
+.general-problem > h2 {
+  color: #ffffff;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  text-align: left;
+  letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .general-problem > h2 {
+    color: #ffffff;
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    text-align: left;
+    letter-spacing: 0.03em;
+  }
+}
+
+@media screen and (min-width: 1680px) {
+  .general-problem > h2 {
+    color: #ffffff;
+    font-weight: 800;
+    font-size: 46px;
+    line-height: 1.3;
+    text-align: left;
+    letter-spacing: 0.03em;
+  }
+}
+
+.teacher-title {
+  font-weight: 800;
+  font-size: 26px;
+  line-height: 1.308;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+}
+
+.teacher-name {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  border: 1px solid #b9b9b9;
+  margin-bottom: 30px;
+}
+
+.teacher-skill {
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 1.214;
+  letter-spacing: 0.06em;
+  margin-bottom: 5px;
+}
+
+.teacher-education {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  color: #b9b9b9;
+  margin-bottom: 10px;
+}
+
+.teacher-link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+  color: #ff6b09;
+}
+
+@media screen and (max-width: 767px) {
+  .teacher-img {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .teacher {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .teacher__right-side {
+    margin-left: 41px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
