main setings mob,tab,pc

--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -293,7 +293,9 @@ h3 {
 }
 
 .container {
-  max-width: 280px;
+  max-width: 320px;
+  padding-left: 20px;
+  padding-right: 20px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -310,28 +312,65 @@ h3 {
   }
 }
 
+.products-container {
+  width: 100%;
+  background: #E5E5E5;
+}
+
 .advantages {
+  display: inline-block;
   font-style: normal;
   font-weight: normal;
-  font-size: 30px;
-  line-height: 34px;
+  font-size: 18px;
+  line-height: 1.45;
   text-align: center;
-  letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: 'accent';
+  color: #FFA5BA;
   margin-top: 127px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .advantages {
+    font-size: 26px;
+    line-height: 1.12;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages {
+    font-size: 30px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+  }
 }
 
 .products-title {
   font-style: normal;
   font-weight: normal;
-  font-size: 58px;
-  line-height: 66px;
+  font-size: 34px;
+  line-height: 1.15;
   text-align: center;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: 'title';
-  margin-right: 15px;
+  color: #D41443;
+  margin: 0;
+  margin-top: 15px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products-title {
+    font-size: 48px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .products-title {
+    font-size: 58px;
+    line-height: 1.16;
+    letter-spacing: 0.06em;
+  }
 }
 
 .products {
@@ -339,6 +378,21 @@ h3 {
   padding: 0;
   margin: 0;
   width: 100%;
+  padding-bottom: 98px;
+}
+
+@media screen and (max-width: 767px) {
+  .products {
+    padding-bottom: 112px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .products {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 
 .products-item {
@@ -346,6 +400,52 @@ h3 {
   padding: 0;
   margin: 0;
   width: 100%;
-  border-radius: 1pc solid red;
+  border-radius: 24px;
+  margin-top: 31px;
+}
+
+@media screen and (max-width: 767px) {
+  .products-item {
+    max-width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products-item {
+    width: calc((100% - 60px) / 3);
+    max-width: 220px;
+    margin-right: 20px;
+  }
+  .products-item:not(:last-child) {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .products-item {
+    width: calc((100% - 60px) / 3);
+    max-width: 329px;
+  }
+  .products-item:not(:last-child) {
+    margin-right: 30px;
+  }
+}
+
+.products-item:nth-child(1) {
+  background: #FFB8CA;
+}
+
+.products-item:nth-child(2) {
+  background: #F0D1A5;
+}
+
+.products-item:nth-child(3) {
+  background: #C2E297;
+}
+
+.products-item:not(:first-child) {
+  margin-top: 17px;
 }
 /*# sourceMappingURL=main.css.map */
