--- a/src/sass/components/_products.scss
+++ b/src/sass/components/_products.scss
@@ -1,35 +1,101 @@
+.products-container{
+    width: 100%;
+    background: #E5E5E5;
+}
 .advantages {
+  display: inline-block;
   font-style: normal;
   font-weight: normal;
-  font-size: 30px;
-  line-height: 34px;
+  font-size: 18px;
+  line-height: 1.45;
   text-align: center;
-  letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: 'accent';
+  color: #FFA5BA;
   margin-top: 127px;
+  width: 100%;
+  @media screen and (min-width:768px) and (max-width:1199px){
+    font-size: 26px;
+  line-height: 1.12;
+  } 
+  @media screen and (min-width:1200px){
+    font-size: 30px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+  }
 }
+
 .products-title {
   font-style: normal;
   font-weight: normal;
-  font-size: 58px;
-  line-height: 66px;
+  font-size: 34px;
+  line-height: 1.15;
   text-align: center;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.04em;
   text-transform: uppercase;
-  color: 'title';
-  margin-right: 15px;
+  color: #D41443;
+  margin: 0;
+  margin-top: 15px;
+  @media screen and (min-width:768px) and (max-width:1199px){
+    font-size: 48px;
+  line-height: 1.14;
+  } 
+  @media screen and (min-width:1200px){
+    font-size: 58px;
+    line-height: 1.16;
+  letter-spacing: 0.06em;
+  }
 }
-.products{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
+.products {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  padding-bottom: 98px;
+  @media screen and (max-width:767px){
+      padding-bottom: 112px;
+  }
+  @media screen and (min-width:768px){
+    display: flex;
+    }
 }
-.products-item{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    border-radius: 1pc solid red;
+.products-item {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  border-radius: 24px;
+  margin-top: 31px;
+  @media screen and (max-width: 767px) {
+    max-width: 280px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: calc((100% - 60px) / 3);
+    max-width: 220px;
+    margin-right: 20px;
+    &:not(:last-child){
+        margin-right: 0px;
+    }
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 60px) / 3);
+    max-width: 329px;
+    &:not(:last-child){
+        margin-right: 30px;
+    }
+  }
+  &:nth-child(1){
+      background:  #FFB8CA;
+  }
+  &:nth-child(2){
+    background:  #F0D1A5;
+    }
+  &:nth-child(3){
+    background:  #C2E297;
+   }
+   &:not(:first-child){
+       margin-top: 17px;
+   }
+
 }
